--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="uk-height-large uk-background-cover uk-light uk-flex" 
   uk-parallax="bgy: -200" style="background-color: black">
 
-  <h1 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
-    Hi {{name}}
+  <h1 *ngIf="userInfo$ | async as userinfo" class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
+    Hi {{userinfo.name}}
   </h1>
 
 </div>
