--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,30 @@
 <div class="uk-width-1-1">
-  <div class="uk-position-center uk-width-1-4">
-          <div>
-                  <fieldset class="uk-fieldset">
-                          <legend class="uk-legend">Login</legend>
-                          <div class="uk-margin">
-                                  <input class="uk-input" 
-                                      type="text" 
-                                      placeholder="Username"
-                                      [(ngModel)]="login">
-                          </div>
-                          <div class="uk-margin">
-                                  <input class="uk-input" 
-                                  type="text" 
-                                  placeholder="Password"
-                                  [(ngModel)]="password">
-                          </div>
-                          <button class=" uk-width-1-1 uk-button uk-button-default"
-                                  (click)="onSignIn(login, password)">
-                                  Sign In
-                          </button>
-                  </fieldset>
-          </div>
-  </div>
+        <div class="uk-position-center uk-width-1-4">
+                <form #authenticate="ngForm" (click)="onSignIn(authenticate.login, authenticate.password)">
+                        <fieldset class="uk-fieldset">
+                                <legend class="uk-legend" style="color:white">Login</legend>
+                                <div class="uk-margin">
+                                        <input class="uk-input" 
+                                         type="text" 
+                                         placeholder="Username" 
+                                         [(ngModel)]="authenticate.login"
+                                         name="login">
+                                </div>
+                                <div class="uk-margin">
+                                        <input class="uk-input" 
+                                         type="password" 
+                                         placeholder="Password" 
+                                         [(ngModel)]="authenticate.password"
+                                         name="password">
+                                </div>
+                          
+                        </fieldset>
+                        <div id="googleBtn" class="g-signin2" data-theme="dark">abc</div>
+                        <button class=" uk-width-1-1 uk-button uk-button-default"   style="color:white">
+                                        Sign In
+                        </button>
+                </form>
+                <button id="authorize-button" style="display: none;">Authorize</button>
+        </div>
+   
 </div>
